; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/jpgicc/extr_jpgicc.c_DoEmbedProfile.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/jpgicc/extr_jpgicc.c_DoEmbedProfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@Compressor = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @DoEmbedProfile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DoEmbedProfile(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i32* @fopen(i8* %7, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %8, i32** %3, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %34

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = call i64 @cmsfilelength(i32* %13)
  store i64 %14, i64* %4, align 8
  %15 = load i64, i64* %4, align 8
  %16 = add i64 %15, 1
  %17 = call i64 @malloc(i64 %16)
  %18 = inttoptr i64 %17 to i64*
  store i64* %18, i64** %6, align 8
  %19 = load i64*, i64** %6, align 8
  %20 = load i64, i64* %4, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = call i64 @fread(i64* %19, i32 1, i64 %20, i32* %21)
  store i64 %22, i64* %5, align 8
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @fclose(i32* %23)
  %25 = load i64*, i64** %6, align 8
  %26 = load i64, i64* %5, align 8
  %27 = getelementptr inbounds i64, i64* %25, i64 %26
  store i64 0, i64* %27, align 8
  %28 = load i64*, i64** %6, align 8
  %29 = load i64, i64* %5, align 8
  %30 = trunc i64 %29 to i32
  %31 = call i32 @write_icc_profile(i32* @Compressor, i64* %28, i32 %30)
  %32 = load i64*, i64** %6, align 8
  %33 = call i32 @free(i64* %32)
  br label %34

34:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i64 @cmsfilelength(i32*) #1

declare dso_local i64 @malloc(i64) #1

declare dso_local i64 @fread(i64*, i32, i64, i32*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @write_icc_profile(i32*, i64*, i32) #1

declare dso_local i32 @free(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
